--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
     <section id="about">
         <h2>About</h2>
-            <p>Hi I’m Ravi. I own and run Genial Labs. I have over 20 years of experience in working with developing software to handle data. I’ve worked with data and machine learning in a range of industries from Cryptocurrencies to Molecular Engineering.</p>
-            <p>Genial is a research lab and software consultancy, specializes in probabilistic deep learning, statistical methods, NLP/LLMs, AI software development, and AWS cloud expertise. Our holistic approach blends cutting-edge research with practical solutions, empowering clients to navigate the dynamic AI landscape. </p>
-            <p>With a focus on collaboration and expertise, we stand as the trusted partner for businesses seeking to harness the full potential of the AI driven era.</p>
+            <p>Hi I’m Ravi. I own and run Genial Labs. I have over 20 years of experience in working with developing software to handle data. I’ve been applying machine learning to data in a range of industries from Cryptocurrencies to Molecular Engineering.</p>
+            <p>Genial is a research lab and software consultancy, specializes in statistics, probabilistic deep learning, LLMs, AI software development, and AWS cloud expertise. The approach is to blend cutting-edge research with practical solutions, empowering clients to navigate the dynamic AI landscape. </p>
+            <p>With a focus on collaboration and expertise, we partner with businesses seeking to harness the full potential of the AI driven era.</p>
         </section>
         
     </section>
