feat(update): minor content change

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <li>Statistical Methods</li>
                 <li>NLP/LLMs</li>
                 <li>AI Software Development</li>
-                <li>AWS Cloud</li>
+                <li>AWS Cloud Integrations</li>
             </ul>
         </section>
         
