feat(content): update specialities

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
         <h2>Specialities</h2>
             <ul>
                 <li>Probabilistic Deep Learning</li>
-                <li>Statistical Methods</li>
+                <li>Computational Statistics </li>
                 <li>NLP/LLMs</li>
                 <li>AI Software Development</li>
-                <li>AWS Cloud Integrations</li>
+                <li>AWS Cloud Consulting</li>
             </ul>
         </section>
         
