--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
     <section id="about">
         <h2>About</h2>
-            <p>Hi I'm <a href="https://project-delphi.github.io/">Ravi</a>. I own and run Genial Labs. I have over 20 years of experience in working with developing software to handle data. I’ve been applying machine learning to a range of industries from Cryptocurrencies to Molecular Engineering.</p>
-            <p>Genial is a research lab and software consultancy, specializes in statistics, probabilistic deep learning, LLMs, AI software development, and AWS cloud expertise. The approach is to blend cutting-edge research with practical solutions, empowering clients to navigate the dynamic AI landscape. </p>
+            <p>Hi I'm <a href="https://project-delphi.github.io/">Ravi</a>. I own and run Genial Labs. I have over 20 years of experience in working with developing software to handle data in the cloud. I have applied machine learning to a range of industries from Cryptocurrencies to Genomic Engineering.</p>
+            <p>Genial, a research lab and software consultancy, specializes in Generative AI, probabilistic machine learning, LLMs, AI software development, and AWS cloud expertise. The approach is to blend cutting-edge research with practical solutions, empowering clients to navigate the AI landscape. </p>
             <p>With a focus on collaboration and expertise, we partner with businesses seeking to harness the full potential of the AI driven era.</p>
         </section>
         
@@ -40,11 +40,10 @@
     <section id="specialities">
         <h2>Specialities</h2>
             <ul>
-                <li>Probabilistic Deep Learning</li>
-                <li>Computational Statistics </li>
-                <li>NLP/LLMs</li>
-                <li>AI Software Development</li>
-                <li>AWS Cloud Consulting</li>
+                <li> Generative AI </li>
+                <li> Probabilistic Machine Learning </li>
+                <li> AI Software Development </li>
+                <li> AWS Cloud Consulting </li>
             </ul>
         </section>
         
