feat(favico): add favicon.ico logo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Genial Labs</title>
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/favicon.ico">
 
 </head>
 
@@ -33,7 +34,7 @@
 
     <section id="contact">
         <h2>Contact</h2>
-       Email: <a href="mailto:contact@genial-labs.ai">contact@genial-labs.ai</a>
+       Email: <a href="mailto:contact@genial-labs.ai"> ravi@genial-labs.com </a>
        
     </section>
 
