fix(email): update contact email

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <section id="contact">
         <h2>Contact</h2>
-       Email: <a href="mailto:contact@genial-labs.ai"> ravi@genial-labs.com </a>
+       Email: <a href="mailto:ravit@genial-labs.com"> ravi@genial-labs.com </a>
        
     </section>
 
