style(prose): update text to look cleaner

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <section id="about">
         <h2>About</h2>
-            <p>Hi I'm <a href="https://project-delphi.github.io/">Ravi</a>. I own and run Genial Labs. I have over 20 years of experience in working with developing software to handle data in the cloud. I have applied machine learning to a range of industries from Cryptocurrencies to Genomic Engineering.</p>
+            <p>Hi I'm <a href="https://project-delphi.github.io/">Ravi</a> - I own and run Genial Labs. I have over 20 years of experience in working with developing software to handle data in the cloud. I have applied machine learning to a range of industries from Cryptocurrencies to Genomic Engineering.</p>
             <p>Genial, a research lab and software consultancy, specializes in Generative AI, probabilistic machine learning, LLMs, AI software development, and AWS cloud expertise. The approach is to blend cutting-edge research with practical solutions, empowering clients to navigate the AI landscape. </p>
             <p>With a focus on collaboration and expertise, we partner with businesses seeking to harness the full potential of the AI driven era.</p>
         </section>
