feat(content): update prose with clarity

--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
     </nav>
 
     <section id="overview">
-        <h2>Overview</h2>
-            <p>Genial, a research lab + software consultancy, specializes in Generative AI, probabilistic machine learning, LLMs, AI software development, and AWS cloud expertise. The approach is to blend cutting-edge research with practical solutions, empowering clients to navigate the AI landscape. </p>
-            <p>With a focus on collaboration and solid software development expertise, we partner with businesses seeking to harness the full potential of the AI driven era.</p>
+            <h2>Overview</h2>
+            <div>
+                <p>Genial, a research lab + software consultancy, offers real world impactful AI solutions: generative + probabilistic ML, NLP, LLMs, scalable software development, and AWS cloud expertise. </p>
+                <p>Combine our AI software craftsmanship to unlock your data's potential, and get ahead of the curve. </p>
+              </div>
     </section>
 
     <section id="expertise">
