fix(owner): update content to be accurate

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </section>
 
     <section id="about">
-        <h2>Partners</h2>
+        <h2>Principal</h2>
         <ul>
             <li> <p> <a href="https://project-delphi.github.io/">Ravi</a> - an experienced data professional with a background in engineering, team leadership, research and education spearheads Genial Labs. </p>         </li>
         </ul>
