fix(content): update references to members of firm

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav>
         <a href="#overview">Overview</a>
         <a href="#expertise">Expertise</a>
-        <a href="#about">Partners</a>
+        <a href="#about">About</a>
         <a href="#contact">Contact</a>
     </nav>
 
