--- a/index.html
+++ b/index.html
@@ -48,10 +48,8 @@
     </section>
 
     <section id="about">
-        <h2>Principal</h2>
-        <ul>
-            <li> <p> <a href="https://project-delphi.github.io/">Ravi</a> - an experienced data professional with a background in engineering, team leadership, research and education spearheads Genial Labs. </p>         </li>
-        </ul>
+        <h2>About</h2>
+      <p> <a href="https://project-delphi.github.io/">Ravi</a> , a principal at Genial Labs, is an experienced data professional with a background in engineering, team leadership, research and education. </p>        
     </section>
 
     <section id="contact">
