feat(content): update with more details

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Genial Labs">
-    <meta property="og:description" content="A research lab + software consultancy for AI">
+    <meta property="og:description" content="AI Engineering, Agents, LLMs, and ML Engineering consultancy">
     <meta property="og:image" content="https://genial-labs.com/assets/favicon.ico">
     <meta property="og:type" content="website">
 
@@ -31,25 +31,33 @@
     <section id="overview">
             <h2>Overview</h2>
             <div>
-                <p>Genial, a research lab + software consultancy, offers real world impactful AI solutions: generative + probabilistic ML, NLP, LLMs, scalable software development, and AWS cloud expertise. </p>
-                <p>Combine our AI software craftsmanship to unlock your data's potential, and get ahead of the curve. </p>
+                <p>Genial Labs is a research lab + software consultancy specializing in cutting-edge AI solutions. We deliver production-ready systems leveraging generative AI, AI agents, probabilistic ML, NLP, LLMs, and modern AI engineering practices. </p>
+                <p>Our expertise spans the full ML engineering lifecycle—from model development and fine-tuning to deployment, monitoring, and optimization. We combine deep research insights with practical software craftsmanship to build scalable, reliable AI systems that unlock your data's potential and drive real business impact. </p>
               </div>
     </section>
 
     <section id="expertise">
         <h2>Expertise</h2>
             <ul>
-                <li> Generative AI </li>
-                <li> NLP & LLMs </li> 
+                <li> AI Agents & Multi-Agent Systems </li>
+                <li> AI Engineering & MLOps </li>
+                <li> LLM Ops & Production Deployment </li>
+                <li> RAG (Retrieval-Augmented Generation) </li>
+                <li> LLM Fine-tuning & Optimization </li>
+                <li> Vector Databases & Embeddings </li>
+                <li> Prompt Engineering & LLM Evaluation </li>
+                <li> Generative AI & Foundation Models </li>
+                <li> NLP & Large Language Models </li>
                 <li> Probabilistic Machine Learning </li>
-                <li> AI Software Development </li>
-                <li> AWS Cloud Consulting </li>
+                <li> Scalable AI Software Development </li>
+                <li> AWS Cloud Infrastructure for AI </li>
             </ul>
     </section>
 
     <section id="about">
         <h2>About</h2>
-      <p> <a href="https://project-delphi.github.io/">Ravi</a>, a principal at Genial Labs, is an experienced data professional with a background in engineering, team leadership, research and education. </p>        
+      <p> <a href="https://project-delphi.github.io/">Ravi</a>, a principal at Genial Labs, is an experienced data professional with a background in engineering, team leadership, research and education. Genial Labs operates with a talented team of AI engineers and researchers dedicated to delivering cutting-edge solutions. </p>
+      <p>If you need more hands-on help, we're open to new consulting work and other forms of advisory. If you need help with your project, you can reach out to our team <a href="#contact">here</a>. </p>        
     </section>
 
     <section id="contact">
